# supreme-xcb

./: 1.py  README.md  ros.txt
catkin_ws/devel/: .catkin  .rosinstall  local_setup.sh
catkin_ws/devel/lib/base_controller/: base_controller
catkin_ws/devel/lib/hxzh_aruco_cammer/: hxzh_aruco_cammer_node  subscriber  text
catkin_ws/devel/lib/pkgconfig/: base_controller.pc  hxzh_aruco_cammer.pc  qr_move.pc  realsense2_camera.pc  teleop_twist_keyboard.pc  test.pc
catkin_ws/devel/lib/qr_move/: my_robot
catkin_ws/devel/lib/test/: TEST
catkin_ws/src/base_controller/: CMakeLists.txt  motec电机can.docx
catkin_ws/src/base_controller/launch/: base_controller.launch
catkin_ws/src/base_controller/src/: .base_controller.cpp.swp  base_controller.cpp  can_port.cpp  can_socket.cpp  com_interface.cpp  motec_motor_driver.cpp
catkin_ws/src/hxzh_aruco_cammer/: CMakeLists.txt
catkin_ws/src/hxzh_aruco_cammer/config/: D455mycalibrationfile2.yml
catkin_ws/src/hxzh_aruco_cammer/include/hxzh_aruco_cammer/: SingleArucoDetection_class.hpp  aruco_cammer.h  conio.h
catkin_ws/src/hxzh_aruco_cammer/msg/: pose.msg
catkin_ws/src/hxzh_aruco_cammer/src/: SingleArucoDetection_class.cpp  aruco_cammer.cpp  aruco_cammer.h  aruco_cammer_node.cpp  aruco_cammer_node2.cpp  conio.cpp  conio.h  qr_control.cpp  text.cpp
catkin_ws/src/qr_move/: CMakeLists.txt
catkin_ws/src/qr_move/src/: my_robot.cpp  my_robot2.cpp  qr_move.cpp
catkin_ws/src/test/: CMakeLists.txt  package.xml
catkin_ws/src/test/src/: TEST.cpp
chengbinWorkSpace/: OpenCVInstall.txt
chengbinWorkSpace/aruco_demo/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  example
chengbinWorkSpace/aruco_demo/data/: D455calibrationfile.yml
chengbinWorkSpace/aruco_demo/include/: example.hpp
chengbinWorkSpace/aruco_demo/src/: SingleArucoDetection_class.cpp  main.cpp
chengbinWorkSpace/droneLanding/: CMakeLists.txt  test.txt
chengbinWorkSpace/droneLanding/aruco/samples/: CMakeLists.txt
chengbinWorkSpace/droneLanding/include/: SingleArucoDetection_class.h  aruco_detection.h  qr_detection.h
chengbinWorkSpace/droneLanding/python/: dataAnalyse.py  main.py  main1.py  main_sk.py  saveImg.py  video2image.py  x.txt  y.txt  z.txt
chengbinWorkSpace/droneLanding/python/Profiles/: Initialized
chengbinWorkSpace/droneLanding/python/Tello/: BasicMovements.py  ColorPicker.py  FaceTracking.py  ImageCapture.py  KeyboardControl.py  LineFllower.py  Mapping.py  Surveillance.py  Tello.py  aruco copy.py  aruco.py  aruco1.py  listenList.py  path-plan.py  tell-stream.py  tello-command.py  tello-state.py  test.py  xcb@192.168.11.124
chengbinWorkSpace/droneLanding/src/: CMakeCache.txt  Makefile  SingleArucoDetection_class.cpp  SingleArucoDetection_class.h  aruco_detection.cpp  cmake_install.cmake  main.cpp  main1.cpp  main10.cpp  main11.cpp  main12.cpp  main13.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  main8.cpp  main9.cpp  qr_detection.cpp  video2imag.py
chengbinWorkSpace/opencv-4.1.1/samples/: CMakeCache.txt
chengbinWorkSpace/opencv-4.1.1/samples/cpp/: CMakeCache.txt  CMakeLists.txt
chengbinWorkSpace/opencv-4.2.0/modules/: CMakeDownloadLog.txt  cmake_uninstall.cmake  download_with_curl.sh  download_with_wget.sh  opencv_data_config.hpp  opencv_python_tests.cfg
vpn/: ubuntu翻墙教程.txt
xcb_ws/: KeyboardControl.py  tellocontrol.py
xcb_ws/Auto_Landing-master/: README.md
xcb_ws/Auto_Landing-master/vicon-position-landing/: 注意.md
xcb_ws/Auto_Landing-master/vicon-position-landing/auto_landing_vicon/: CMakeLists.txt  package.xml
xcb_ws/Auto_Landing-master/vicon-position-landing/auto_landing_vicon/launch/: vicon_position_auto_landing.launch
xcb_ws/Auto_Landing-master/vicon-position-landing/auto_landing_vicon/src/: vicon_position_auto_land.cpp
xcb_ws/Auto_Landing-master/visual-flow-landing/visual-flow-landing-0112/land_control-visual-flow/: CMakeLists.txt  argument
xcb_ws/Auto_Landing-master/visual-flow-landing/visual-flow-landing-0112/land_control-visual-flow/cfg/: tracking_pid.cfg
xcb_ws/Auto_Landing-master/visual-flow-landing/visual-flow-landing-0112/land_control-visual-flow/launch/: auto_land.launch
xcb_ws/Auto_Landing-master/visual-flow-landing/visual-flow-landing-0112/land_control-visual-flow/src/: velocity_marker_land_node.cpp  velocity_marker_tracker_node (backup).cpp
xcb_ws/master_thesis-master/: .gitignore  Thesis.tex  config.sty  customConfig.sty
xcb_ws/master_thesis-master/bib/: bibliography.bib
xcb_ws/master_thesis-master/img/: Communication.pdf_tex  Landing_modes.pdf_tex  ROSoverview.pdf_tex  UAV_LP_above.pdf_tex  filterSetup.pdf_tex  kalman_filter_update.pdf_tex  node_aruco.pdf_tex  node_controller.pdf_tex  node_navigation.pdf_tex  refFrames.pdf_tex  zyx_convention.pdf_tex
xcb_ws/master_thesis-master/tex/: abstract.tex  camera_callibration.tex  conclusion_and_future_work.tex  controller_logic.tex  controller_tuning.tex  discussion.tex  fiducial_marker.tex  filter_tuning.tex  glossary.tex  guidance_methods.tex  implementation.tex  introduction.tex  modeling.tex  preface.tex  results_simulations.tex  sammendrag.tex  sensors.tex  state_estimation.tex  test_setup.tex
xcb_ws/personalcode/: BasicMovements.py  KeyPressModule.py  aruco.py  aruco1.py  aruco2.py  aruco3.py  aruco4.py  control.cpp  qrcode.cpp  tellocontrol.py
xcb_ws/volans/: .gitignore  .gitmodules  README.md  source_environment_jetson.sh  source_environment_simulation.sh
xcb_ws/volans/doc/: CarGuidance.md  CarInstallationGuide.md  CarOperatingGuide.md  QuadGuidance.md
xcb_ws/volans/src/sup/motion_planning/ros_moveit/: CMakeLists.txt  package.xml
xcb_ws/volans/src/sup/motion_planning/ros_moveit/launch/moveit/: iris_moveit.launch
xcb_ws/volans/src/sup/motion_planning/ros_moveit/src/: drone_controller.cpp
xcb_ws/volans/src/volans/: CMakeLists.txt  README.md  package.xml
xcb_ws/volans/src/volans/include/: gimbal_control.h
xcb_ws/volans/src/volans/launch/: connect_pixhawk_usb.launch  landing.launch  t265_position_to_mavros.launch
xcb_ws/volans/src/volans/src/: gimbal_control.cpp
(+371 files in other folders)
